syntax = "proto3";
import "google/protobuf/timestamp.proto";
package iunite.club.srv.user;

service UserSrv {
  rpc FindUserByID(QueryUserRequest) returns (UserResponse) {}
  rpc FindProfileByID(QueryProfileRequest) returns (ProfileResponse) {}
  rpc CreateUser(User) returns (Response) {}
  rpc UpdateUser(UpdateUserRequest) returns (Response) {}
  rpc FindUsers(PagerRequest) returns (UserListResponse) {}
  rpc IsUserEnabled(QueryUserRequest) returns (Response) {}

  // RegisterUserByMobile 注册一个新的用户
  rpc RegisterUserByMobile(RegisterUserRequest) returns (RegisterUserResponse) {}

  // ResetPasswordByMobile 重置密码
  rpc ResetPasswordByMobile(ResetPasswordRequest) returns (ResetPasswordResponse) {}

  rpc SigninByMobile(SigninByMobileRequest) returns (UserResponse) {}

  // rpc ResetPassword(ResetPasswordRequest) returns(ResetPasswordResponse) {}
  rpc FindUsersByClubID(FindUsersByClubIDRequest) returns(UserListResponse) {}
  rpc CreateMember(CreateMemberRequest) returns(Response) {}
}

message CreateMemberRequest {
  User User = 1;
  string ClubID = 2;
  string JobID = 3;
  string DepartmentID = 4;
}

message FindUsersByClubIDRequest {
  int64 Page = 1;
  int64 Limit = 2;
  string ClubID = 3;
}

message ResetPasswordResponse {
  string UpdatedAt = 1;
  string ID = 2;
}

message User {
  string ID = 1;
  string Username = 2;
  bool Enabled = 3;
  string SchoolID = 4;
  Profile Profile = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
  bool Deleted = 8;
  string Password = 9;
  string DefaultClubID = 10;
}

message Profile {
  string ID = 11;
  string Avatar = 1;
  string Firstname = 2;
  string Lastname = 3;
  string Gender = 4;
  google.protobuf.Timestamp Birthday = 5;
  string Nickname = 6;
  string UserID = 7;
  string Mobile = 8;
  google.protobuf.Timestamp CreatedAt = 9;
  google.protobuf.Timestamp UpdatedAt = 10;
  string Email = 12;
  string Major = 13;
  string SchoolDepartment = 14;
  string SchoolClass = 15;
  string AdvisorMobile = 16;
  string AdvisorName = 17;
  string StudentID = 18;
  string RoomNumber = 19;
}

message ResetPasswordRequest {
  string Mobile = 1;
  // string MobileAreaCode = 2;
  // string Code = 3;
  string Password = 2;
  string ConfirmPassword = 3;
  string UserID = 4;
}

message SigninByMobileRequest {
  string Mobile = 1;
  string Password = 2;
}

message RegisterUserRequest {
  string SchoolID = 1;
  string Mobile = 2;
  string Code = 3;
  string Firstname = 4;
  string Lastname = 5;
  string Password = 6;
  string ConfirmPassword = 7;
}

message RegisterUserResponse {
  User User = 1;
  bool OK = 2;
}

message Response {
  bool OK = 1;
}

message UserListResponse {
  repeated User users = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 count = 4;
}

message PagerRequest {
  int32 page = 1;
  int32 limit = 2;
  
}

message UpdateUserRequest {
  // User userInfo = 1;
  string ID = 1;
  bytes User = 2;
  bytes Profile = 3;
}

message QueryUserRequest {
  string id = 1;
}

message UserResponse {
  User user = 1;
}

message QueryProfileRequest {
  string id = 1;
}

message ProfileResponse {
  Profile profile = 1;
}

